--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,38 +3,98 @@
         <div class="profile-img">
             <img src="img/logo.png">
         </div>
-        <label class="item item-input">
-            <div class="input-label">
-                Name
-            </div>
-            <div class="input-label">
-                Wohlig Technology
-            </div>
-        </label>
-        <label class="item item-input">
-            <div class="input-label">
-                Area
-            </div>
-            <div class="input-label">
-                Mulund
-            </div>
-        </label>
-        <label class="item item-input">
-            <div class="input-label">
-                Category
-            </div>
-            <div class="input-label">
-                Mobile
-            </div>
-        </label>
-        <label class="item item-input item-text-wrap">
-            <div class="input-label">
-                Description
-            </div>
-            <div class="input-label">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-            </div>
-        </label>
+        <div class="list profile-cont">
+            <label class="item item-input">
+                <div class="input-label">
+                    Name
+                </div>
+                <div class="input-label">
+                    Wohlig Technology
+                </div>
+            </label>
+            <label class="item item-input">
+                <div class="input-label">
+                    Area
+                </div>
+                <div class="input-label">
+                    Mulund
+                </div>
+            </label>
+            <label class="item item-input">
+                <div class="input-label">
+                    Category
+                </div>
+                <div class="input-label">
+                    Mobile
+                </div>
+            </label>
+            <label class="item item-input item-text-wrap">
+                <div class="input-label">
+                    Address
+                </div>
+                <div class="input itemproducts">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </div>
+            </label>
+            <label class="item item-input item-text-wrap">
+                <div class="input-label">
+                    Description
+                </div>
+                <div class="input itemproducts">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                </div>
+            </label>
+            <label class="item item-input item-text-wrap">
+                <h2>Shops</h2>
+            </label>
+            <label class="item item-input item-text-wrap itemproducts">
+                <div class="input-label">
+                    <div class="img-profile">
+                        <img src="img/dookie.jpg">
+                    </div>
+                </div>
+                <div class="input-label">
+                    <div class="img-profile">
+                        <img src="img/dookie.jpg">
+                    </div>
+                </div>
+                <div class="input-label">
+                    <div class="img-profile">
+                        <img src="img/dookie.jpg">
+                    </div>
+                </div>
+                <!--
+               <div class="input">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+</div>
+-->
+            </label>
+            <label class="item item-input item-text-wrap">
+                <h2>Products</h2>
+            </label>
+            <label class="item item-input item-text-wrap itemproducts">
+                <div class="input-label">
+                    <div class="img-profile">
+                        <img src="img/dookie.jpg">
+                    </div>
+                </div>
+                <div class="input-label">
+                    <div class="img-profile">
+                        <img src="img/dookie.jpg">
+                    </div>
+                </div>
+                <div class="input-label">
+                    <div class="img-profile">
+                        <img src="img/dookie.jpg">
+                    </div>
+                </div>
+                <!--
+               <div class="input">
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+</div>
+-->
+            </label>
+        </div>
         <div class="btn-edit padding">
             <button class="button button-block button-outline button-balanced">
                 Edit
