--- a/css/style.css
+++ b/css/style.css
@@ -13,8 +13,8 @@
     height: 260px;
 }
 
-.results .item{
-    margin:0px!important;
+.results .item {
+    margin: 0px!important;
 }
 
 .prod-info {
@@ -73,14 +73,224 @@ button.btn-smalls {
     width: 50%;
 }
 
+.img-profile img {
+    width: 100%;
+}
+
 .welcome-img img {
     width: 100%;
 }
-.lesspadding .item{
-    padding:5px!important;
-    
+
+.lesspadding .item {
+    padding: 5px!important;
 }
-.lesspadding .item-content{
-    padding:0px!important;
-    
+
+.lesspadding .item-content {
+    padding: 0px!important;
 }
+
+.list.profile-cont .item {
+    padding-right: 25px;
+}
+
+.list.product-cont .item {
+    padding-right: 15px;
+}
+
+.input.itemproducts {
+    padding-right: 15px;
+}
+/*modal*/
+
+#thumb-gallery {
+    margin-top: 0 auto;
+    max-width: 1500px;
+}
+
+.gallery-item {
+    float: left;
+    width: 33.33333333%;
+}
+
+.gallery-item a {
+    display: block;
+    margin: 5px;
+    border: 1px solid #3c3c3c;
+    cursor: pointer;
+}
+
+.gallery-item a img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
+
+@media only screen and (max-width: 480px) {
+    /* Small desktop / ipad view: 3 tiles */
+    
+    .gallery-item {
+        width: 33.3%;
+    }
+}
+
+body.ps-active {
+    -webkit-text-size-adjust: none;
+}
+
+body.ps-active * {
+    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
+}
+
+body.ps-active *:focus {
+    outline: 0;
+}
+/* Document overlay */
+
+div.ps-document-overlay {
+    background: #000;
+}
+/* Viewport */
+
+div.ps-viewport {
+    background: #000;
+    cursor: pointer;
+}
+/* Zoom/pan/rotate layer */
+
+div.ps-zoom-pan-rotate {
+    background: #000;
+}
+/* Slider */
+
+div.ps-slider-item-loading {
+    background: url(images/photoswipe-loader.gif) no-repeat center center;
+}
+/* Caption */
+
+div.ps-caption {
+    background: #000000;
+    background: -moz-linear-gradient(top, #303130 0%, #000101 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #303130), color-stop(100%, #000101));
+    border-bottom: 1px solid #42403f;
+    color: #ffffff;
+    font-size: 13px;
+    font-family: "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
+    text-align: center;
+}
+
+div.ps-caption-bottom {
+    border-top: 1px solid #42403f;
+    border-bottom: none;
+}
+
+div.ps-caption-content {
+    padding: 13px;
+}
+/* Toolbar */
+
+div.ps-toolbar {
+    background: #000000;
+    background: -moz-linear-gradient(top, #303130 0%, #000101 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #303130), color-stop(100%, #000101));
+    border-top: 1px solid #42403f;
+    color: #ffffff;
+    font-size: 13px;
+    font-family: "Lucida Grande", Helvetica, Arial, Verdana, sans-serif;
+    text-align: center;
+    height: 44px;
+    display: table;
+    table-layout: fixed;
+}
+
+div.ps-toolbar-top {
+    border-bottom: 1px solid #42403f;
+    border-top: none;
+}
+
+div.ps-toolbar-close,
+div.ps-toolbar-previous,
+div.ps-toolbar-next,
+div.ps-toolbar-play {
+    cursor: pointer;
+    display: table-cell;
+}
+
+div.ps-toolbar div div.ps-toolbar-content {
+    width: 44px;
+    height: 44px;
+    margin: 0 auto 0;
+    background-image: url(images/photoswipe-icons.png);
+    background-repeat: no-repeat;
+}
+
+div.ps-toolbar-close div.ps-toolbar-content {
+    background-position: 0 0;
+}
+
+div.ps-toolbar-previous div.ps-toolbar-content {
+    background-position: -44px 0;
+}
+
+div.ps-toolbar-previous-disabled div.ps-toolbar-content {
+    background-position: -44px -44px;
+}
+
+div.ps-toolbar-next div.ps-toolbar-content {
+    background-position: -132px 0;
+}
+
+div.ps-toolbar-next-disabled div.ps-toolbar-content {
+    background-position: -132px -44px;
+}
+
+div.ps-toolbar-play div.ps-toolbar-content {
+    background-position: -88px 0;
+}
+/* Hi-res retina display */
+
+@media only screen and (-webkit-min-device-pixel-ratio: 2) {
+    div.ps-toolbar div div.ps-toolbar-content {
+        -webkit-background-size: 176px 88px;
+        background-image: url(images/photoswipe-icons@2x.png);
+    }
+}
+
+.transparent {
+    background: transparent !important;
+}
+
+.image-modal {
+    width: 100% !important;
+    height: 100%;
+    top: 0 !important;
+    left: 0 !important;
+}
+
+.fullscreen-image {
+    max-width: 100%;
+    max-height: 100%;
+    bottom: 0;
+    left: 0;
+    margin: auto;
+    overflow: auto;
+    position: fixed;
+    right: 0;
+    top: 0;
+}
+
+.slider {
+    width: 100%;
+    height: 100%;
+}
+
+p.info {
+    position: absolute;
+    bottom: 55px;
+    margin: 0 auto;
+    width: 100%;
+    display: block;
+    text-align: center;
+    font-size: 28px;
+    color: #ffffff;
+}
+/*modal end*/
