--- a/templates/product.html
+++ b/templates/product.html
@@ -91,6 +91,11 @@
                         <img src="img/dookie.jpg">
                     </div>
                 </div>
+                <div class="input-label">
+                    <div class="img-profile">
+                        <img src="img/dookie.jpg">
+                    </div>
+                </div>
                 <!--
                <div class="input">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
