--- a/templates/profile.html
+++ b/templates/profile.html
@@ -74,27 +74,33 @@
             </label>
             <label class="item item-input item-text-wrap itemproducts">
                 <div class="input-label">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openedit();"><img src="img/dookie.jpg">
+                    </button>
                 </div>
                 <div class="input-label">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openedit();"><img src="img/dookie.jpg">
+                    </button>
                 </div>
                 <div class="input-label">
-                    <div class="img-profile">
-                        <img src="img/dookie.jpg">
-                    </div>
+                    <button class="button" ng-click="openedit();"><img src="img/dookie.jpg">
+                    </button>
                 </div>
-                <!--
+            </label>
+        </div>
+        <!--
                <div class="input">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
 </div>
 -->
-            </label>
-        </div>
+
+        <!--        </div>-->
+<!--
+     <div class="btn-edit padding">
+    <button class="button button-block button-outline button-balanced" ng-click="openpswd();">
+        Reset Password
+    </button>
+</div>
+-->
         <div class="btn-edit padding">
             <button class="button button-block button-outline button-balanced">
                 Edit
