--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,16 @@
 /* Empty. Add your own CSS if you like */
 
+@font-face {
+    font-family: 'PT Sans;
+ src: url('../fonts/PT_Sans-Web-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'PT Sans;
+ src: url('../fonts/PT_Sans-Web-Bold.ttf');
+    font-weight: bold;
+}
+
 .list h4 {
     text-align: center;
 }
