--- a/templates/profile.html
+++ b/templates/profile.html
@@ -94,14 +94,11 @@
 -->
 
         <!--        </div>-->
-<!--
-     <div class="btn-edit padding">
+<div class="btn-edit padding">
     <button class="button button-block button-outline button-balanced" ng-click="openpswd();">
         Reset Password
     </button>
-</div>
--->
-        <div class="btn-edit padding">
+</div>        <div class="btn-edit padding">
             <button class="button button-block button-outline button-balanced">
                 Edit
             </button>
