--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,5 +1,5 @@
 <ion-view>
-    <div class="bar bar-header bar-calm">
+    <div class="bar bar-header bar-royal">
         <div class="h1 title">Login</div>
     </div>
     <ion-content class="has-header">
