--- a/templates/image-modal.html
+++ b/templates/image-modal.html
@@ -1,5 +1,5 @@
-<div class="modal image-modal transparent" ng-click="closeModal()">
-    <div class="modal image-modal transparent" ng-click="closeModal()">
+<div class="modal image-modal transparent" ng-click="closeModals()">
+    <div class="modal image-modal transparent" ng-click="closeModals()">
         <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false">
             <ion-slide ng-repeat="oImage in aImages">
                 <img ng-src="{{oImage.src}}" class="fullscreen-image" />
