--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,12 +1,9 @@
-<ion-view>
-    <div class="bar bar-header bar-royal">
-        <div class="h1 title">Login</div>
-    </div>
-    <ion-content class="has-header">
+<ion-view class="bg-xb">
+    <ion-content>
         <div class="welcome-img">
             <img src="img/logo.png">
         </div>
-        <div>
+        <div class="list login-mk">
             <label class="item item-input">
                 <span class="input-label">Member ID</span>
                 <input type="text" placeholder="">
@@ -15,11 +12,11 @@
                 <span class="input-label">Password</span>
                 <input type="text" placeholder="">
             </label>
-            <div class="padding">
-                <a class="button button-block button-outline button-balanced" type="submit" href="#/app/home">Login</a>
+            <div class="btn-login">
+                <a class="button button-small button-balanced" type="submit" href="#/app/home">Login</a>
             </div>
 
-            <div class="padding"><a href="#">Forgot Password?</a></div>
+<!--            <div class="forgot"><a href="#">Forgot Password?</a></div>-->
         </div>
     </ion-content>
 </ion-view>
