--- a/templates/home.html
+++ b/templates/home.html
@@ -1,37 +1,36 @@
-<ion-view view-title="Welcome">
-    <ion-content>
-        <label class="item item-input">
-            <span class="input-label">Area</span>
-            <input type="text" placeholder="Enter Your Area">
-        </label>
-        <label class="item item-input item-select">
-            <div class="input-label">
-                Catergories
-            </div>
-            <select>
-                <option>Mobile</option>
-                <option selected>Personal Computers</option>
-                <option>Laptops</option>
-            </select>
+<ion-view view-title="Home">
+    <ion-content class="padding">
+        <div class="incard">
+           <div class="header-card">Find shops</div>
+            <label class="item item-input">
+                <span class="input-label">Area</span>
+                <input type="text" placeholder="Enter Your Area">
+            </label>
+            <label class="item item-input item-select">
+                <div class="input-label">
+                    Catergories
+                </div>
+                <select>
+                    <option>Mobile</option>
+                    <option selected>Personal Computers</option>
+                    <option>Laptops</option>
+                </select>
 
-        </label>
-        <div class="home-or">
-            <h6>- OR -</h6>
-        </div>
-        <label class="item item-input item-select">
-            <div class="input-label">
-                Memebership No.
+            </label>
+            <div class="home-or">
+                <h6>- OR -</h6>
             </div>
-            <select>
-                <option>123</option>
-                <option selected>1234</option>
-                <option>12345</option>
-            </select>
-        </label>
-        <div class="padding">
-            <a href="#/app/search">
-                <button class="button button-block button-outline button-balanced">Search</button>
-            </a>
+            <label class="item item-input">
+                <div class="input-label">
+                    Membership No.
+                </div>
+                <p>Please select</p>
+            </label>
+            <div class="padding">
+                <a href="#/app/search">
+                    <button class="button button-block button-outline button-balanced">Search</button>
+                </a>
+            </div>
         </div>
     </ion-content>
 </ion-view>
