--- a/templates/search.html
+++ b/templates/search.html
@@ -1,55 +1,22 @@
 <ion-view view-title="Search Result">
-    <ion-content>
-        <div class="row item item-divider">
-            <div class="col">Area</div>
-            <div class="col">Category</div>
+    <ion-content class="padding">
+
+        <div class="incard">
+            <ion-list class="lesspadding">
+                <ion-item class="headed">
+                    <div class="row">
+                        <div class="col">Name</div>
+                        <div class="col">Sell Balance</div>
+                    </div>
+                </ion-item>
+                <ion-item href="#/app/product">
+                    <div class="row">
+                        <div class="col">Nokia</div>
+                        <div class="col"><span class="balanced amount">Rs.60,000</span></div>
+                    </div>
+                </ion-item>
+            </ion-list>
         </div>
-        
-        <ion-list class="lesspadding">
-            <ion-item>
-                <div class="row">
-                    <div class="col">Mulund</div>
-                    <div class="col">Mobile</div>
-                </div>
-            </ion-item>
-           
-        </ion-list>
-
-
-        <div class="row item item-divider">
-            <div class="col">Name</div>
-            <div class="col">Sell Balance</div>
-        </div>
-
-        <ion-list class="lesspadding">
-            <ion-item href="#/app/product">
-                <div class="row">
-                    <div class="col">Nokia</div>
-                    <div class="col">Rs.60,000</div>
-                </div>
-            </ion-item> <ion-item href="#/app/product">
-                <div class="row">
-                    <div class="col">Sony</div>
-                    <div class="col">Rs.50,000</div>
-                </div>
-            </ion-item> <ion-item href="#/app/product">
-                <div class="row">
-                    <div class="col">Karbon</div>
-                    <div class="col">Rs.40,000</div>
-                </div>
-            </ion-item> <ion-item href="#/app/product">
-                <div class="row">
-                    <div class="col">Micromax</div>
-                    <div class="col">Rs.30,000</div>
-                </div>
-            </ion-item> <ion-item href="#/app/product">
-                <div class="row">
-                    <div class="col">Samsung</div>
-                    <div class="col">Rs.10,000</div>
-                </div>
-            </ion-item>
-        </ion-list>
-        
 
     </ion-content>
 </ion-view>
