--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -13,7 +13,7 @@
                 <input type="text" placeholder="">
             </label>
             <div class="btn-login">
-                <a class="button button-small button-balanced" type="submit" href="#/app/home">Login</a>
+                <a class="button button-block button-balanced" type="submit" href="#/app/home">Login</a>
             </div>
 
 <!--            <div class="forgot"><a href="#">Forgot Password?</a></div>-->
