--- a/templates/profile.html
+++ b/templates/profile.html
@@ -74,15 +74,15 @@
             </label>
             <label class="item item-input item-text-wrap itemproducts">
                 <div class="input-label">
-                    <button class="button" ng-click="openedit();"><img src="img/dookie.jpg">
+                    <button class="button" ng-click="openpswd();"><img src="img/dookie.jpg">
                     </button>
                 </div>
                 <div class="input-label">
-                    <button class="button" ng-click="openedit();"><img src="img/dookie.jpg">
+                    <button class="button" ng-click="openpswd();"><img src="img/dookie.jpg">
                     </button>
                 </div>
                 <div class="input-label">
-                    <button class="button" ng-click="openedit();"><img src="img/dookie.jpg">
+                    <button class="button" ng-click="openpswd();"><img src="img/dookie.jpg">
                     </button>
                 </div>
             </label>
@@ -95,7 +95,7 @@
 
         <!--        </div>-->
 <div class="btn-edit padding">
-    <button class="button button-block button-outline button-balanced" ng-click="openpswd();">
+    <button class="button button-block button-outline button-balanced" ng-click="openedit();">
         Reset Password
     </button>
 </div>        <div class="btn-edit padding">
