--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -10,7 +10,7 @@
             </label>
             <label class="item item-input">
                 <span class="input-label">Password</span>
-                <input type="text" placeholder="">
+                <input type="password" placeholder="">
             </label>
             <div class="btn-login">
                 <a class="button button-block button-balanced" type="submit" href="#/app/home">Login</a>
