--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,23 @@
-<ion-view view-title="Search Result">
+<ion-view view-title="Search Result" class="bar-royal">
     <ion-content class="padding">
-
+       
+        <div class="incard pad-btm">
+            <ion-list class="lesspadding">
+                <ion-item class="area">
+                    <div class="row">
+                        <div class="col"><h3>Area</h3></div>
+                        <div class="col"><div class="flt-right">Mulund</div></div>
+                    </div>
+                </ion-item>
+                <ion-item class="category">
+                    <div class="row">
+                        <div class="col"><h3>Category</h3></div>
+                        <div class="col"><div class="flt-right">Mobile</div></div>
+                    </div>
+                </ion-item>
+            </ion-list>
+        </div>
+        
         <div class="incard">
             <ion-list class="lesspadding">
                 <ion-item class="headed">
@@ -10,6 +27,18 @@
                     </div>
                 </ion-item>
                 <ion-item href="#/app/product">
+                    <div class="row">
+                        <div class="col">Nokia</div>
+                        <div class="col"><span class="balanced amount">Rs.60,000</span></div>
+                    </div>
+                </ion-item>     
+                              <ion-item href="#/app/product">
+                    <div class="row">
+                        <div class="col">Nokia</div>
+                        <div class="col"><span class="balanced amount">Rs.60,000</span></div>
+                    </div>
+                </ion-item>           
+                        <ion-item href="#/app/product">
                     <div class="row">
                         <div class="col">Nokia</div>
                         <div class="col"><span class="balanced amount">Rs.60,000</span></div>
