--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -1,7 +1,7 @@
 <ion-view class="bg-xb">
     <ion-content>
         <div class="welcome-img">
-            <img src="img/logo.png">
+            <img src="img/main.png">
         </div>
         <div class="list login-mk">
             <label class="item item-input">
