--- a/templates/shop.html
+++ b/templates/shop.html
@@ -1,41 +1,15 @@
-<ion-view view-title="Product">
+<ion-view view-title="Shop">
     <ion-content>
-        <div class="padding">
-        </div>
-        <!--
-<div>
-    <label><b>Name:</b>
-    </label><span>Nokia</span>
-</div>
--->
-        <!--
-            <div>
-                <label><b>Sell Balance:</b>
-                </label><span>Rs.60,000</span>
-            </div>
--->
-        <!--
-            <h5><b>Details:</b></h5>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
--->
-
+              <div class="incard pad-btm">
         <div class="list product-cont">
-            <label class="item item-input item-text-wrap">
+          <ion-item>
                 <div class="input-label">
-                    Name:
+                   <h2>Nokia</h2> 
                 </div>
                 <div class="input">
-                    Nokia
+                   Rs.60,000
                 </div>
-            </label>
-            <label class="item item-input item-text-wrap">
-                <div class="input-label">
-                    Sell Balance:
-                </div>
-                <div class="input">
-                    Rs.60,000
-                </div>
-            </label>
+            </ion-item>
             <label class="item item-input item-text-wrap">
                 <div class="input-label">
                     Address
@@ -102,6 +76,7 @@
 </div>
 -->
             </label>
+        </div>
         </div>
         <div class="padding">
             <button class="button button-block button-outline button-balanced" ng-click="openedit();">
