--- a/templates/resetpswd.html
+++ b/templates/resetpswd.html
@@ -1,5 +1,5 @@
 <ion-modal-view>
-    <ion-header-bar class="bar-calm">
+    <ion-header-bar class="bar-royal">
         <h1 class="title">Reset Password</h1>
         <div class="buttons">
             <button class="button button-clear" ng-click="closeModal()">Close</button>
