--- a/templates/home.html
+++ b/templates/home.html
@@ -2,11 +2,11 @@
     <ion-content class="padding">
         <div class="incard">
            <div class="header-card">Find shops</div>
-            <label class="item item-input">
+            <label class="item item-input area">
                 <span class="input-label">Area</span>
                 <input type="text" placeholder="Enter Your Area">
             </label>
-            <label class="item item-input item-select">
+            <label class="item item-input item-select area">
                 <div class="input-label">
                     Catergories
                 </div>
@@ -20,13 +20,13 @@
             <div class="home-or">
                 <h6>- OR -</h6>
             </div>
-            <label class="item item-input">
-                <div class="input-label">
+            <label class="item item-input area">
+                <span class="input-label">
                     Membership No.
-                </div>
-                <p>Please select</p>
+                </span>
+              <p>Please Select</p>
             </label>
-            <div class="padding">
+            <div class="padding-horizontal">
                 <a href="#/app/search">
                     <button class="button button-block button-outline button-balanced">Search</button>
                 </a>
