--- a/templates/resetpswd.html
+++ b/templates/resetpswd.html
@@ -2,7 +2,7 @@
     <ion-header-bar class="bar-royal">
         <h1 class="title">Reset Password</h1>
         <div class="buttons">
-            <button class="button button-clear" ng-click="closeModal()">Close</button>
+            <button class="button button-clear" ng-click="closeModals()">Close</button>
         </div>
     </ion-header-bar>
     <ion-content>
