--- a/templates/search.html
+++ b/templates/search.html
@@ -26,19 +26,19 @@
                         <div class="col">Sell Balance</div>
                     </div>
                 </ion-item>
-                <ion-item href="#/app/product">
+                <ion-item href="#/app/shop">
                     <div class="row">
                         <div class="col">Nokia</div>
                         <div class="col"><span class="balanced amount">Rs.60,000</span></div>
                     </div>
                 </ion-item>     
-                              <ion-item href="#/app/product">
+                              <ion-item href="#/app/shop">
                     <div class="row">
                         <div class="col">Nokia</div>
                         <div class="col"><span class="balanced amount">Rs.60,000</span></div>
                     </div>
                 </ion-item>           
-                        <ion-item href="#/app/product">
+                        <ion-item href="#/app/shop">
                     <div class="row">
                         <div class="col">Nokia</div>
                         <div class="col"><span class="balanced amount">Rs.60,000</span></div>
